# GoIt_Python

./: README.md  mod_6_dz.py  mod_8_dz.py  mod_9_dz.py
AddressBook/: book_assistant.py  classes.py
clean_folder/: README.md  pyproject.toml  setup.cfg
clean_folder/clean_folder/: clean.py
